--- a/URL_Shortener_Web/Views/Home/Index.cshtml
+++ b/URL_Shortener_Web/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">INFORCE URL Shortener</h1>
-    <p></p>
+<p>For shortening URLs, the "Hashids" library was chosen.</p>
+    <p>"Hashids" are obfuscated unique hashes of non-negative (long) integer numbers, but unlike cryptographic one-way hash algorithms, they can be decoded again.<br />
+    The algorithm can be used to generate a hash from a single number or combine several numbers into one, which can be stored as simple short UIDs.</p>
 </div>
